Fixed sponsorship text animation. Fixed it to not display on mobile.

--- a/css/thanks_sponsors.css
+++ b/css/thanks_sponsors.css
@@ -2,19 +2,26 @@
 #thanks-sponsors {
   position: fixed;
   bottom: 0;
-  left: 20%;
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
   text-align:center;
   display: inline-block;
   color:#FFF;
   font-family:Roboto;
   font-weight:300;
-  font-size:150%;
+  font-size:0%;
   overflow:hidden;
   -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
   -webkit-transform: translate3d(0,0,0);
+}
+@media(min-width:70em){#thanks-sponsors{font-size: 150%}}
+
+#sponsor-text {
+    display:inline-block;
+    overflow:hidden;
+    white-space:nowrap;
+    animation: showup 7s infinite;
 }
 
 #sponsor-start-text {
@@ -26,13 +33,13 @@
 
 #sponsor-reveal-span {
     margin-left:-355px;
-    animation: slidein 7s infinite;
+    animation: showup 7s infinite;
 }
 
 #sponsor-reveal-text {
     display:inline-block;
     overflow:hidden;
-    animation: reveal 7s infinite;
+    animation: showup 7s infinite;
 }
 
 @keyframes showup {
